# kahucik

./: .env.example  .gitignore  LICENSE  Makefile  README.md  compose.yaml
.github/workflows/: ci.yml
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial.py
apps/api/src/kahucik_api/: __init__.py  config.py  db.py  main.py  redis_client.py  worker.py
apps/api/src/kahucik_api/auth/: sessions.py
apps/api/src/kahucik_api/game/: __init__.py  engine.py  state.py
apps/api/src/kahucik_api/media/: __init__.py  storage.py
apps/api/src/kahucik_api/middleware/: rate_limit.py
apps/api/src/kahucik_api/models/: __init__.py  entities.py
apps/api/src/kahucik_api/routers/: auth.py  games.py  media.py  quizzes.py
apps/api/src/kahucik_api/schemas/: auth.py  common.py  game.py  quiz.py
apps/api/src/kahucik_api/services/: normalize.py  quiz_service.py  scoring.py
apps/api/src/kahucik_api/ws/: handler.py
apps/api/tests/: test_normalize.py  test_quiz_correct_map.py  test_quiz_schema.py  test_scoring.py
apps/web/: .dockerignore  Dockerfile  package-lock.json  package.json  playwright.config.ts
apps/web/e2e/: smoke.spec.ts
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/hooks/: useGameSocket.ts
apps/web/src/i18n/: request.ts  routing.ts
apps/web/src/lib/: api.ts  types.ts
apps/web/src/messages/: en.json  sk.json
infra/caddy/: Caddyfile
loadtest/: locustfile.py
scripts/: capture-readme-screenshots.mjs  generate-openapi.sh  redeploy.sh
(+24 files in other folders)
